Updated Occitan translation
svn path=/trunk/; revision=13947

--- a/po/oc.po
+++ b/po/oc.po
@@ -1,4 +1,3 @@
-# Translation of oc.po to Occitan
 # Occitan translation of nautilus.
 # Copyright (C) 2007 Free Software Foundation, Inc.
 # This file is distributed under the same license as the nautilus package.
@@ -8,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: oc\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-03-16 16:30+0100\n"
+"POT-Creation-Date: 2008-03-16 20:22+0000\n"
 "PO-Revision-Date: 2008-03-16 21:20+0100\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: ../data/browser.xml.h:1
 msgid "Apparition"
@@ -956,12 +955,12 @@ msgid ""
 "If set to \"never\" then never bother to thumbnail images, just use a "
 "generic icon."
 msgstr ""
-"Optimizacion de la velocitat de visualizacion d'un fichièr imatge en miniatura. "
-"S'es definit a \"always\", la miniatura se visualiza totjorn, e mai lo "
-"repertòri es sus un servidor distant. S'es definit a \"local_only\", "
-"las miniaturas se visualizan pas que pels sistèmas de fichièrs "
-"locals. S'es défini a \"never\", las miniaturas son pas jamai "
-"visualizadas, s'utilizan sonque d'icòna genericas."
+"Optimizacion de la velocitat de visualizacion d'un fichièr imatge en "
+"miniatura. S'es definit a \"always\", la miniatura se visualiza totjorn, e "
+"mai lo repertòri es sus un servidor distant. S'es definit a \"local_only\", "
+"las miniaturas se visualizan pas que pels sistèmas de fichièrs locals. S'es "
+"défini a \"never\", las miniaturas son pas jamai visualizadas, s'utilizan "
+"sonque d'icòna genericas."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:99
 msgid ""
@@ -971,10 +970,10 @@ msgid ""
 "systems. If set to \"never\" then never bother to compute item counts."
 msgstr ""
 "Optimizacion de la velocitat de visualizacion del nombre d'elements d'un "
-"repertòri. S'es definit à \"always\", lo nombre d'elements se visualiza totjorn, "
-"e mai lo repertòri siá sus un servidor distant. S'es definit a \"local_only\", "
-"lo nombre d'elements es pas visualizat que pels sistèmas de fichièrs "
-"locals. S'es definit a \"never\", lo nombre d'elements es pas jamai "
+"repertòri. S'es definit à \"always\", lo nombre d'elements se visualiza "
+"totjorn, e mai lo repertòri siá sus un servidor distant. S'es definit a "
+"\"local_only\", lo nombre d'elements es pas visualizat que pels sistèmas de "
+"fichièrs locals. S'es definit a \"never\", lo nombre d'elements es pas jamai "
 "visualizat."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:100
@@ -1018,7 +1017,9 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:106
 msgid "The side pane view to show in newly opened windows."
-msgstr "La visualizacion de panèl lateral de visualizar dins las fenèstras novèlament dobèrtas."
+msgstr ""
+"La visualizacion de panèl lateral de visualizar dins las fenèstras "
+"novèlament dobèrtas."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:107
 msgid ""
@@ -1079,10 +1080,10 @@ msgid ""
 "\"ask\" to ask what to do via a dialog, and \"display\" to display them as "
 "text files."
 msgstr ""
-"Indica çò que cal far amb los fichièrs tèxt executables quand son "
-"activats (simple o doble clic). Las valors possiblas son \"launch\" per "
-"los executar coma de programas, \"ask\" per demandar de que far dins una "
-"fenèstra e \"display\" per los visualizar coma de fichièrs tèxt."
+"Indica çò que cal far amb los fichièrs tèxt executables quand son activats "
+"(simple o doble clic). Las valors possiblas son \"launch\" per los executar "
+"coma de programas, \"ask\" per demandar de que far dins una fenèstra e "
+"\"display\" per los visualizar coma de fichièrs tèxt."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:117
 msgid ""
@@ -1116,8 +1117,9 @@ msgstr "Indica se un fons de panèl lateral per defaut personalizat es definit."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:123
 msgid "Whether to ask for confirmation when deleting files, or emptying Trash"
-msgstr "Indica se cal demandar una confirmacion al moment de suprimir los "
-"fichièrs o de voidar la banasta."
+msgstr ""
+"Indica se cal demandar una confirmacion al moment de suprimir los fichièrs o "
+"de voidar la banasta."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:124
 msgid "Whether to automatically mount media"
@@ -1125,8 +1127,9 @@ msgstr "Indica se cal montar automaticament los supòrts"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:125
 msgid "Whether to automatically open a folder for automounted media"
-msgstr "Indica se cal dobrir automaticament un repertòri quand de supòrts "
-"son montats automaticament"
+msgstr ""
+"Indica se cal dobrir automaticament un repertòri quand de supòrts son "
+"montats automaticament"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:126
 msgid "Whether to enable immediate deletion"
@@ -1134,7 +1137,8 @@ msgstr "Indica se cal activar la supression immediata"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:127
 msgid "Whether to preview sounds when mousing over an icon"
-msgstr "Indica se cal una escota previa quand la mirga passa endessús d'una icòna"
+msgstr ""
+"Indica se cal una escota previa quand la mirga passa endessús d'una icòna"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:128
 msgid "Whether to show backup files"
@@ -1230,7 +1234,8 @@ msgid ""
 "You have just inserted media with software intended to be automatically "
 "started."
 msgstr ""
-"Venètz d'inserir un supòrt amb un logiciel previst per s'aviar automaticament."
+"Venètz d'inserir un supòrt amb un logiciel previst per s'aviar "
+"automaticament."
 
 #. fallback to generic greeting
 #: ../libnautilus-private/nautilus-autorun.c:1105
@@ -1725,13 +1730,14 @@ msgstr "Sètz segur que volètz suprimir per totjorn '%B' de l'escobilièr ?"
 msgid ""
 "Are you sure you want to permanently delete the %'d selected item from the "
 "trash?"
+msgid_plural ""
 "Are you sure you want to permanently delete the %'d selected items from the "
 "trash?"
-msgstr ""
-"Sètz segur que volètz suprimir per totjorn l'element seleccionat de "
-"l'escobilièr ?"
+msgstr[0] "Sètz segur que volètz suprimir per totjorn l'element seleccionat "
+"de la banasta ?"
+msgstr[1] ""
 "Sètz segur que volètz suprimir per totjorn los %'d elements seleccionats "
-"de l'escobilièr ?"
+"de la banasta ?"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1107
 #: ../libnautilus-private/nautilus-file-operations.c:1173
@@ -1758,10 +1764,12 @@ msgstr "Sètz segur que volètz suprimir per totjorn \"%B\" ?"
 #: ../libnautilus-private/nautilus-file-operations.c:1164
 #, c-format
 msgid "Are you sure you want to permanently delete the %'d selected item?"
+msgid_plural ""
 "Are you sure you want to permanently delete the %'d selected items?"
-msgstr "Sètz segur que volètz suprimir per totjorn l'element"
+msgstr[0] "Sètz segur que volètz suprimir per totjorn l'element "
 "seleccionat ?"
-"Sètz segur que volètz suprimir per totjorn los %'d elements"
+msgstr[1] ""
+"Sètz segur que volètz suprimir per totjorn los %'d elements "
 "seleccionats ?"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1206
@@ -1871,9 +1879,8 @@ msgid ""
 "In order to regain the free space on this volume the trash must be emptied. "
 "All trashed items on the volume will be permanently lost."
 msgstr ""
-"Per recobrar d'espaci liure sus aqueste periferic, la banasta deu "
-"èsser voidada. Totrs los elements de la banasta seràn suprimits "
-"per totjorn."
+"Per recobrar d'espaci liure sus aqueste periferic, la banasta deu èsser "
+"voidada. Totrs los elements de la banasta seràn suprimits per totjorn."
 
 #: ../libnautilus-private/nautilus-file-operations.c:1939
 msgid "Don't Empty Trash"
@@ -1940,8 +1947,8 @@ msgid ""
 "Files in the folder \"%B\" cannot be handled because you do not have "
 "permissions to see them."
 msgstr ""
-"Impossible de tractar los fichièrs del repertòri \"%B\" per çò que "
-"avètz pas la permission de los legir."
+"Impossible de tractar los fichièrs del repertòri \"%B\" per çò que avètz pas "
+"la permission de los legir."
 
 #: ../libnautilus-private/nautilus-file-operations.c:2204
 msgid ""
@@ -2131,8 +2138,8 @@ msgid ""
 "files being copied."
 msgstr ""
 "Lo repertòri sorga existís ja dins \"%B\". La fusion demanderà una "
-"confirmacion abans cada remplaçament de fichièr qu'es conflicte amb "
-"los fichièrs a se copiar dins lo repertòri."
+"confirmacion abans cada remplaçament de fichièr qu'es conflicte amb los "
+"fichièrs a se copiar dins lo repertòri."
 
 #: ../libnautilus-private/nautilus-file-operations.c:3315
 #: ../libnautilus-private/nautilus-file-operations.c:3762
@@ -2192,8 +2199,8 @@ msgid ""
 "files being moved."
 msgstr ""
 "Lo repertòri sorga existís ja dins \"%B\". La fusion demanderà una "
-"confirmacion abans cada remplaçament de fichièr qu'es conflicte amb "
-"los fichièrs a se desplaçar dins lo repertòri."
+"confirmacion abans cada remplaçament de fichièr qu'es conflicte amb los "
+"fichièrs a se desplaçar dins lo repertòri."
 
 #: ../libnautilus-private/nautilus-file-operations.c:3854
 #, c-format
@@ -3027,7 +3034,8 @@ msgid ""
 "again. The local files you dropped have already been opened."
 msgstr ""
 "Per dobrir de fichièrs distants, copiatz-los dins un repertòri local puèi "
-"rossegatz-los tornamai. Los fichièrs locals qu'avètz rossegats son ja dobèrts."
+"rossegatz-los tornamai. Los fichièrs locals qu'avètz rossegats son ja "
+"dobèrts."
 
 #: ../libnautilus-private/nautilus-progress-info.c:222
 msgid "File operations"
@@ -3135,12 +3143,13 @@ msgstr "Fabrica de metafichièrs de Nautilus"
 msgid ""
 "Nautilus operations that can be done from subsequent command-line invocations"
 msgstr ""
-"Operacions de Nautilus que podètz executar de mercés a de paramètres "
-"que correspondon en linha de commanda"
+"Operacions de Nautilus que podètz executar de mercés a de paramètres que "
+"correspondon en linha de commanda"
 
 #: ../src/Nautilus_shell.server.in.h:6
 msgid "Produces metafile objects for accessing Nautilus metadata"
-msgstr "Produsís d'objèctes metafichièrs per accedir a las metadonadas Nautilus"
+msgstr ""
+"Produsís d'objèctes metafichièrs per accedir a las metadonadas Nautilus"
 
 #: ../src/file-manager/fm-desktop-icon-view.c:618
 msgid "Background"
@@ -3427,18 +3436,22 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:5568
 #, c-format
 msgid "The %'d selected item will be moved if you select the Paste command"
+msgid_plural ""
 "The %'d selected items will be moved if you select the Paste command"
-msgstr "Se seleccionatz la comanda Pegar, l'element seleccionat serà "
+msgstr[0] "Se seleccionatz la comanda Pegar, l'element seleccionat serà "
 "desplaçat"
+msgstr[1] ""
 "Se seleccionatz la comanda Pegar, los %'d elements seleccionats seràn "
 "desplaçats"
 
 #: ../src/file-manager/fm-directory-view.c:5575
 #, c-format
 msgid "The %'d selected item will be copied if you select the Paste command"
+msgid_plural ""
 "The %'d selected items will be copied if you select the Paste command"
-msgstr "Se seleccionatz la comanda Pegar, l'element seleccionat serà "
+msgstr[0] "Se seleccionatz la comanda Pegar, l'element seleccionat serà "
 "copiat"
+msgstr[1] ""
 "Se seleccionatz la comanda Pegar, los %'d elements seleccionats seràn "
 "copiats"
 
@@ -4170,8 +4183,9 @@ msgstr "_Ordenar per nom"
 #. tooltip
 #: ../src/file-manager/fm-icon-view.c:1435
 msgid "Reposition icons to better fit in the window and avoid overlapping"
-msgstr "Reposiciona las icònas per los adaptar d'un biais armoniós "
-"a la fenèstra e evitar los encambaments"
+msgstr ""
+"Reposiciona las icònas per los adaptar d'un biais armoniós a la fenèstra e "
+"evitar los encambaments"
 
 #. name, stock id
 #. label, accelerator
@@ -4716,8 +4730,8 @@ msgid ""
 "installing Nautilus again."
 msgstr ""
 "Podètz pas utilizar Nautilus ara. Aviar la comanda \"bonobo-slay\" dins lo  "
-"terminal pòt resòlvre lo problèma. S'es pas lo cas, podètz ensajar de "
-"tornar aviar l'ordenador o de tornar installar Nautilus."
+"terminal pòt resòlvre lo problèma. S'es pas lo cas, podètz ensajar de tornar "
+"aviar l'ordenador o de tornar installar Nautilus."
 
 #. FIXME bugzilla.gnome.org 42536: The guesses and stuff here are lame.
 #: ../src/nautilus-application.c:597
@@ -4741,20 +4755,19 @@ msgid ""
 "installed."
 msgstr ""
 "Podètz pas utilizar Nautilus ara. Executar la commanda \"bonobo-slay\" "
-"dempuèi lo terminal pòt gerir lo problèma. Si que non, podètz ensajar  "
-"de tornar aviar l'ordenador o de tornar installar Nautilus.\n"
+"dempuèi lo terminal pòt gerir lo problèma. Si que non, podètz ensajar  de "
+"tornar aviar l'ordenador o de tornar installar Nautilus.\n"
 "\n"
-"Bonobo pòt pas localizar lo fichièr Nautilus_shell.server. Sembla "
-"qu'una rason a-n aquò siá que LD_LIBRARY_PATH inclusís pas lo "
-"repertòri de las bibliotècas de bonobo-activation. Una autra causa"
-"possibla pòt èsser una marrida installacion amb lo fichièr "
-"Nautilus_Shell.server que manca.\n"
+"Bonobo pòt pas localizar lo fichièr Nautilus_shell.server. Sembla qu'una "
+"rason a-n aquò siá que LD_LIBRARY_PATH inclusís pas lo repertòri de las "
+"bibliotècas de bonobo-activation. Una autra causapossibla pòt èsser una "
+"marrida installacion amb lo fichièr Nautilus_Shell.server que manca.\n"
 "\n"
 "Executar \"bonobo-slay\" tua totes los procediments Bonobo Activation e "
 "GConf, que pòdon èsser necessaris a d'autras aplicacions.\n"
 "\n"
-"De còps, tuar bonobo-activation-server e gconfd resòlv lo problèma, "
-"mas sabèm pas perqué.\n"
+"De còps, tuar bonobo-activation-server e gconfd resòlv lo problèma, mas "
+"sabèm pas perqué.\n"
 "\n"
 "Avèm tanben remarcat aquesta error quand una marrida version de bonobo-"
 "activation es installada."
@@ -4779,8 +4792,8 @@ msgid ""
 "attempting to register the file manager view server."
 msgstr ""
 "Podètz pas utilizar Nautilus ara a causa d'una error imprevista que ven de "
-"Bonobo al moment d'ensajar de declarar lo servidor de visualizacion "
-"del gestionari de fichièrs."
+"Bonobo al moment d'ensajar de declarar lo servidor de visualizacion del "
+"gestionari de fichièrs."
 
 #: ../src/nautilus-application.c:646
 msgid ""
@@ -4788,10 +4801,9 @@ msgid ""
 "attempting to locate the factory. Killing bonobo-activation-server and "
 "restarting Nautilus may help fix the problem."
 msgstr ""
-"Podètz pas utilizar Nautilus ara a causa d'una error imprevista que ven "
-"de Bonobo al moment d'ensajar de localizar la fabrica. Tuar "
-"bonobo-activation-server e tornar aviar Nautilus pòt ajudar a "
-"resòlvre lo problèma."
+"Podètz pas utilizar Nautilus ara a causa d'una error imprevista que ven de "
+"Bonobo al moment d'ensajar de localizar la fabrica. Tuar bonobo-activation-"
+"server e tornar aviar Nautilus pòt ajudar a resòlvre lo problèma."
 
 #: ../src/nautilus-application.c:653
 msgid ""
@@ -4799,10 +4811,9 @@ msgid ""
 "attempting to locate the shell object. Killing bonobo-activation-server and "
 "restarting Nautilus may help fix the problem."
 msgstr ""
-"Podètz pas utilizar Nautilus ara a causa d'una error imprevista que ven "
-"de Bonobo al moment d'ensajar de localizar l'objècte shell. Tuar "
-"bonobo-activation-server e tornar aviar Nautilus pòt ajudar a "
-"resòlvre lo problèma."
+"Podètz pas utilizar Nautilus ara a causa d'una error imprevista que ven de "
+"Bonobo al moment d'ensajar de localizar l'objècte shell. Tuar bonobo-"
+"activation-server e tornar aviar Nautilus pòt ajudar a resòlvre lo problèma."
 
 #: ../src/nautilus-application.c:1353 ../src/nautilus-places-sidebar.c:1484
 #: ../src/nautilus-places-sidebar.c:1507 ../src/nautilus-places-sidebar.c:1530
@@ -4995,8 +5006,8 @@ msgid ""
 "This is probably because the emblem is a permanent one, and not one that you "
 "added yourself."
 msgstr ""
-"Es segurament per çò que s'agís d'una emblèma permanenta e pas d'una "
-"emblèma qu'avètz aponduda."
+"Es segurament per çò que s'agís d'una emblèma permanenta e pas d'una emblèma "
+"qu'avètz aponduda."
 
 #: ../src/nautilus-emblem-sidebar.c:272
 #, c-format
@@ -5024,8 +5035,8 @@ msgid ""
 "Enter a descriptive name next to each emblem.  This name will be used in "
 "other places to identify the emblem."
 msgstr ""
-"Picatz un nom descriptiu al costat de cada emblèma. Aqueste nom serà utilizat "
-"als autres endreches per identificar l'emblèma."
+"Picatz un nom descriptiu al costat de cada emblèma. Aqueste nom serà "
+"utilizat als autres endreches per identificar l'emblèma."
 
 #: ../src/nautilus-emblem-sidebar.c:558
 msgid ""
