Updated Occitan translation
svn path=/trunk/; revision=13948

--- a/po/oc.po
+++ b/po/oc.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: oc\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-03-16 20:22+0000\n"
-"PO-Revision-Date: 2008-03-16 21:20+0100\n"
+"PO-Revision-Date: 2008-03-16 21:53+0100\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);"
 
 #: ../data/browser.xml.h:1
 msgid "Apparition"
@@ -1730,12 +1730,10 @@ msgstr "Sètz segur que volètz suprimir per totjorn '%B' de l'escobilièr ?"
 msgid ""
 "Are you sure you want to permanently delete the %'d selected item from the "
 "trash?"
-msgid_plural ""
 "Are you sure you want to permanently delete the %'d selected items from the "
 "trash?"
-msgstr[0] "Sètz segur que volètz suprimir per totjorn l'element seleccionat "
+msgstr "Sètz segur que volètz suprimir per totjorn l'element seleccionat "
 "de la banasta ?"
-msgstr[1] ""
 "Sètz segur que volètz suprimir per totjorn los %'d elements seleccionats "
 "de la banasta ?"
 
@@ -1764,11 +1762,9 @@ msgstr "Sètz segur que volètz suprimir per totjorn \"%B\" ?"
 #: ../libnautilus-private/nautilus-file-operations.c:1164
 #, c-format
 msgid "Are you sure you want to permanently delete the %'d selected item?"
-msgid_plural ""
 "Are you sure you want to permanently delete the %'d selected items?"
-msgstr[0] "Sètz segur que volètz suprimir per totjorn l'element "
+msgstr "Sètz segur que volètz suprimir per totjorn l'element "
 "seleccionat ?"
-msgstr[1] ""
 "Sètz segur que volètz suprimir per totjorn los %'d elements "
 "seleccionats ?"
 
@@ -2271,7 +2267,7 @@ msgstr "Impossible de montar lo fichièr"
 #: ../libnautilus-private/nautilus-file.c:1316
 #, c-format
 msgid "Slashes are not allowed in filenames"
-msgstr ""
+msgstr "Las barras oblicas son pas permesas dins los noms de fichièrs"
 
 #: ../libnautilus-private/nautilus-file.c:1334
 #, c-format
@@ -2734,7 +2730,7 @@ msgstr "Lo rectangle de seleccion"
 
 #: ../libnautilus-private/nautilus-icon-dnd.c:907
 msgid "Switch to Manual Layout?"
-msgstr ""
+msgstr "Passar en disposicion manuala ?"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:593
 #, c-format
@@ -3014,7 +3010,7 @@ msgstr "Detalhs : "
 #: ../libnautilus-private/nautilus-program-choosing.c:396
 #: ../libnautilus-private/nautilus-program-choosing.c:462
 msgid "There was an error launching the application."
-msgstr ""
+msgstr "I a aguda una error al moment d'aviar l'aplicacion."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:425
 #: ../libnautilus-private/nautilus-program-choosing.c:436
@@ -3187,6 +3183,8 @@ msgstr "Modificar lo _fons del burèu"
 msgid ""
 "Show a window that lets you set your desktop background's pattern or color"
 msgstr ""
+"Visualiza una fenèstra que vos permet de definir los motius e las colors "
+"del fons de vòstre burèu"
 
 #. tooltip
 #: ../src/file-manager/fm-desktop-icon-view.c:709
@@ -3211,11 +3209,11 @@ msgstr "Visualizar coma _burèu"
 
 #: ../src/file-manager/fm-desktop-icon-view.c:801
 msgid "The desktop view encountered an error."
-msgstr ""
+msgstr "I a aguda una error dins la visualizacion del burèu."
 
 #: ../src/file-manager/fm-desktop-icon-view.c:802
 msgid "The desktop view encountered an error while starting up."
-msgstr ""
+msgstr "I a aguda una error dins la visualizacion del burèu al moment d'aviar."
 
 #: ../src/file-manager/fm-desktop-icon-view.c:803
 msgid "Display this location with the desktop view."
@@ -3425,40 +3423,36 @@ msgstr ""
 #: ../src/file-manager/fm-tree-view.c:891
 #, c-format
 msgid "\"%s\" will be moved if you select the Paste command"
-msgstr ""
+msgstr "Se seleccionatz la comanda Pegar, \"%s\" serà desplaçat"
 
 #: ../src/file-manager/fm-directory-view.c:5561
 #: ../src/file-manager/fm-tree-view.c:895
 #, c-format
 msgid "\"%s\" will be copied if you select the Paste command"
-msgstr ""
+msgstr "Se seleccionatz la comanda Pegar, \"%s\" serà copiat"
 
 #: ../src/file-manager/fm-directory-view.c:5568
 #, c-format
 msgid "The %'d selected item will be moved if you select the Paste command"
-msgid_plural ""
 "The %'d selected items will be moved if you select the Paste command"
-msgstr[0] "Se seleccionatz la comanda Pegar, l'element seleccionat serà "
+msgstr "Se seleccionatz la comanda Pegar, l'element seleccionat serà "
 "desplaçat"
-msgstr[1] ""
 "Se seleccionatz la comanda Pegar, los %'d elements seleccionats seràn "
 "desplaçats"
 
 #: ../src/file-manager/fm-directory-view.c:5575
 #, c-format
 msgid "The %'d selected item will be copied if you select the Paste command"
-msgid_plural ""
 "The %'d selected items will be copied if you select the Paste command"
-msgstr[0] "Se seleccionatz la comanda Pegar, l'element seleccionat serà "
+msgstr "Se seleccionatz la comanda Pegar, l'element seleccionat serà "
 "copiat"
-msgstr[1] ""
 "Se seleccionatz la comanda Pegar, los %'d elements seleccionats seràn "
 "copiats"
 
 #: ../src/file-manager/fm-directory-view.c:5669
 #: ../src/file-manager/fm-tree-view.c:972
 msgid "There is nothing on the clipboard to paste."
-msgstr ""
+msgstr "I a res de pegar dins lo pòrta-papièr."
 
 #: ../src/file-manager/fm-directory-view.c:6028
 #, c-format
@@ -3588,7 +3582,7 @@ msgstr "_Dobrir lo repertòri dels escriptes"
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6295
 msgid "Show the folder containing the scripts that appear in this menu"
-msgstr ""
+msgstr "Visualizar lo repertòri que conten los escripts que se visualizan dins aqueste menu"
 
 #. name, stock id
 #. label, accelerator
@@ -3646,7 +3640,7 @@ msgstr "Seleccionar un _motiu"
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6325
 msgid "Select items in this window matching a given pattern"
-msgstr ""
+msgstr "Seleccionatz los elements d'aquesta fenèstra que correspondon a un motiu balhat"
 
 #. name, stock id
 #. label, accelerator
@@ -3715,7 +3709,8 @@ msgstr "Inicializar la visualizar a las valors per _defaut"
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6353
 msgid "Reset sorting order and zoom level to match preferences for this view"
-msgstr ""
+msgstr "Aplica l'òrdre de classificacion e lo nivèl de zoom indicats dins las preferéncias "
+"a-n aquesta visualizacion"
 
 #. name, stock id
 #. label, accelerator
@@ -4271,11 +4266,11 @@ msgstr "Visualizar coma _icònas"
 
 #: ../src/file-manager/fm-icon-view.c:2740
 msgid "The icon view encountered an error."
-msgstr ""
+msgstr "I a aguda una error dins la visualizacion en icònas."
 
 #: ../src/file-manager/fm-icon-view.c:2741
 msgid "The icon view encountered an error while starting up."
-msgstr ""
+msgstr "I a aguda una error dins la visualizacion en icònas al moment de s'aviar."
 
 #: ../src/file-manager/fm-icon-view.c:2742
 msgid "Display this location with the icon view."
@@ -4326,11 +4321,11 @@ msgstr "Visualizar coma _tièra"
 
 #: ../src/file-manager/fm-list-view.c:2802
 msgid "The list view encountered an error."
-msgstr ""
+msgstr "I a aguda una error dins la visualizacion en tièra."
 
 #: ../src/file-manager/fm-list-view.c:2803
 msgid "The list view encountered an error while starting up."
-msgstr ""
+msgstr "I a aguda una error dins la visualizacion en tièra al moment de s'aviar."
 
 #: ../src/file-manager/fm-list-view.c:2804
 msgid "Display this location with the list view."
@@ -4348,7 +4343,7 @@ msgstr "Seleccionatz un sol imatge per ne far una icòna personalizada."
 #: ../src/file-manager/fm-properties-window.c:536
 #: ../src/nautilus-information-panel.c:518
 msgid "The file that you dropped is not local."
-msgstr ""
+msgstr "Lo fichièr qu'avètz rossegat es pas local."
 
 #: ../src/file-manager/fm-properties-window.c:537
 #: ../src/file-manager/fm-properties-window.c:543
@@ -4359,7 +4354,7 @@ msgstr "Podètz utilizar sonque d'imatges locals coma icònas personalizats."
 #: ../src/file-manager/fm-properties-window.c:542
 #: ../src/nautilus-information-panel.c:524
 msgid "The file that you dropped is not an image."
-msgstr ""
+msgstr "Lo fichièr qu'avètz rossegat es pas un imatge."
 
 #: ../src/file-manager/fm-properties-window.c:1032
 #, c-format
@@ -5065,7 +5060,7 @@ msgstr "Sembla que lo fichièr '%s' es pas un imatge valid."
 
 #: ../src/nautilus-emblem-sidebar.c:821
 msgid "The dragged file does not appear to be a valid image."
-msgstr ""
+msgstr "Sembla que lo fichièr rossegat es pas un imatge valid."
 
 #: ../src/nautilus-emblem-sidebar.c:823 ../src/nautilus-emblem-sidebar.c:874
 msgid "The emblem cannot be added."
@@ -6660,3 +6655,4 @@ msgstr "Definir lo nivèl de zoom de la visualizacion actuala"
 #: ../src/network-scheme.desktop.in.h:2
 msgid "Network"
 msgstr "Ret"
+
