Mount location when using the external connect to server dialog app.
2008-03-17  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-connect-server-dialog-main.c:
        * src/nautilus-connect-server-dialog-nonmain.c:
        * src/nautilus-connect-server-dialog.c:
	Mount location when using the external connect
	to server dialog app. (#520390)
	Patch from Cosimo Cecchi <anarki@lilik.it>


svn path=/trunk/; revision=13949

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-03-17  Alexander Larsson  <alexl@redhat.com>
+
+        * src/nautilus-connect-server-dialog-main.c:
+        * src/nautilus-connect-server-dialog-nonmain.c:
+        * src/nautilus-connect-server-dialog.c:
+	Mount location when using the external connect
+	to server dialog app. (#520390)
+	Patch from Cosimo Cecchi <anarki@lilik.it>
+
 2008-03-14  A. Walton  <awalton@svn.gnome.org>
 
 	* src/nautilus-connect-server-dialog.c
