Trivial build fix for users with Gtk+ SVN trunk (#522835), caused by
2008-03-17  A. Walton  <awalton@svn.gnome.org>

	* libnautilus-private/nautilus-icon-info.h:
	Trivial build fix for users with Gtk+ SVN trunk (#522835), 
	caused by recent changes in Gtk+'s file includes.
	Patch from Marc-Andre Lureau.


svn path=/trunk/; revision=13951

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-03-17  A. Walton  <awalton@svn.gnome.org>
+
+	* libnautilus-private/nautilus-icon-info.h:
+	Trivial build fix for users with Gtk+ SVN trunk (#522835), 
+	caused by recent changes in Gtk+'s file includes.
+	Patch from Marc-Andre Lureau.
+	
 2008-03-17  Alexander Larsson  <alexl@redhat.com>
 
         * src/nautilus-connect-server-dialog-main.c:
