--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-03-19  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* src/file-manager/fm-directory-view.c: (file_should_show_foreach):
+	Allow "Connect to server" for sftp and ssh shares too (#385608).
+	Patch from Mike Hommey.
+
 2008-03-18  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-file.c:
