Add Christian Neumair as new maintainer
2008-03-19  Alexander Larsson  <alexl@redhat.com>

	* MAINTAINERS:
	Add Christian Neumair as new maintainer


svn path=/trunk/; revision=13956

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-19  Alexander Larsson  <alexl@redhat.com>
+
+	* MAINTAINERS:
+	Add Christian Neumair as new maintainer
+
 2008-03-19  Sebastian Dröge  <slomo@circular-chaos.org>
 
 	* libnautilus-private/nautilus-search-engine-tracker.c:
