Only strip icon name when it ends with a know icon extension.
2008-03-19  Frederic Crozat  <fcrozat@mandriva.com>

        * libnautilus-private/nautilus-link.c:
        Only strip icon name when it ends with a know
        icon extension.


svn path=/trunk/; revision=13957

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-03-19  Frederic Crozat  <fcrozat@mandriva.com>
+
+	* libnautilus-private/nautilus-link.c:
+	Only strip icon name when it ends with a know
+	icon extension.
+
 2008-03-19  Alexander Larsson  <alexl@redhat.com>
 
 	* MAINTAINERS:
