Updated Lithuanian translation.
2008-03-20  Gintautas Miliauskas  <gintas@akl.lt>

	* lt.po: Updated Lithuanian translation.



svn path=/trunk/; revision=13958

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-20  Gintautas Miliauskas  <gintas@akl.lt>
+
+	* lt.po: Updated Lithuanian translation.
+
 2008-03-15  Alexander Nyakhaychyk  <nab@mail.by>
 
 	* be.po: Updated Belarusian Translation.
