--- a/po/lt.po
+++ b/po/lt.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: lt\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-03-01 17:26+0200\n"
-"PO-Revision-Date: 2008-03-02 18:30+0200\n"
+"PO-Revision-Date: 2008-03-20 04:16+0200\n"
 "Last-Translator: Žygimantas Beručka <zygis@gnome.org>\n"
 "Language-Team: Lithuanian <gnome-lt@lists.akl.lt>\n"
 "MIME-Version: 1.0\n"
@@ -2778,7 +2778,7 @@ msgstr "Pa_leisti"
 #: ../libnautilus-private/nautilus-mime-actions.c:986
 #: ../src/file-manager/fm-directory-view.c:613
 msgid "Are you sure you want to open all files?"
-msgstr "Ar tikrai norite atverti visas failus?"
+msgstr "Ar tikrai norite atverti visus failus?"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:987
 #: ../src/nautilus-location-bar.c:151
