--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2008-03-20  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-program-choosing.c:
+	Use GDesktopAppInfos for launching desktop files. (#342084)
+	Patch from Cosimo Cecchi.
+	
+        * src/file-manager/fm-directory-view.c:
+        (paste_clipboard_data):
+	Fix leak 
+
 2008-03-19  Frederic Crozat  <fcrozat@mandriva.com>
 
 	* libnautilus-private/nautilus-link.c:
