--- a/po/el.po
+++ b/po/el.po
@@ -49,7 +49,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: el\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-03-09 12:37+0200\n"
+"POT-Creation-Date: 2008-03-09 10:41+0000\n"
 "PO-Revision-Date: 2008-03-09 12:35+0200\n"
 "Last-Translator: Kostas Papadimas <pkst@gnome.org>\n"
 "Language-Team: Greek <team@gnome.gr>\n"
@@ -3206,7 +3206,7 @@ msgstr ""
 
 #: ../nautilus-file-management-properties.desktop.in.in.h:2
 msgid "File Management"
-msgstr "Διαχείριση Αρχείων"
+msgstr "Διαχείριση αρχείων"
 
 #: ../nautilus-home.desktop.in.in.h:1 ../src/file-manager/fm-tree-view.c:1246
 msgid "Home Folder"
@@ -3304,7 +3304,7 @@ msgstr "Διαγραφή όλων των αντικειμένων από τα Α
 #: ../src/nautilus-desktop-window.c:251 ../src/nautilus-pathbar.c:1127
 #: ../src/nautilus-places-sidebar.c:279
 msgid "Desktop"
-msgstr "Επιφάνεια Εργασίας"
+msgstr "Επιφάνεια εργασίας"
 
 #: ../src/file-manager/fm-desktop-icon-view.c:799
 msgid "View as Desktop"
@@ -6093,7 +6093,7 @@ msgstr "Εμφάνιση τοποθεσιών"
 #. set the title and standard close accelerator
 #: ../src/nautilus-property-browser.c:279
 msgid "Backgrounds and Emblems"
-msgstr "Παρασκήνια και Εμβλήματα"
+msgstr "Παρασκήνια και εμβλήματα"
 
 #: ../src/nautilus-property-browser.c:388
 msgid "_Remove..."
