--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-03-23  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-file-operations.c
+	(custom_full_name_skip), (custom_basename_skip),
+	(custom_size_skip), (custom_time_skip), (custom_mount_skip):
+	Fix compiler warnings about unused value by casting va_arg calls with
+	unused return values to void. (#523908).
+
 2008-03-22  Christian Neumair  <cneumair@gnome.org>
 
 	* src/file-manager/fm-directory-view.c
