--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-23  Nguyễn Thái Ngọc Duy <pclouds@gmail.com>
+
+	* vi.po: Update Vietnamese translation
+
 2008-03-22  Nikos Charonitakis  <nikosx@gmail.com>
 
 	* el.po: Updated Greek translation.
