do not leak the location string when autocompleting.
2008-03-23  Paolo Borelli  <pborelli@katamail.com>

	* src/nautilus-location-entry.c: do not leak the
	location string when autocompleting.


svn path=/trunk/; revision=13978

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-23  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/nautilus-location-entry.c: do not leak the
+	location string when autocompleting.
+
 2008-03-23  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-directory-async.c
