Use playbin for playback, but keep video playback disabled. (#523959).
2008-03-23  Christian Neumair  <cneumair@gnome.org>

	* src/file-manager/fm-icon-view.c (play_file):
	Use playbin for playback, but keep video playback disabled. (#523959).

svn path=/trunk/; revision=13979

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-23  Christian Neumair  <cneumair@gnome.org>
+
+	* src/file-manager/fm-icon-view.c (play_file):
+	Use playbin for playback, but keep video playback disabled. (#523959).
+
 2008-03-23  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/nautilus-location-entry.c: do not leak the
