--- a/po/fi.po
+++ b/po/fi.po
@@ -3,7 +3,8 @@
 #
 # Copyright (C) 2002 Free Software Foundation, Inc.
 # Pauli Virtanen <pauli.virtanen@hut.fi>, 2000-2005.
-# Ilkka Tuohela <hile@iki.fi>, 2005.
+# Ilkka Tuohela <hile@iki.fi>, 2005-2008.
+# Timo Jyrinki <timo.jyrinki@iki.fi>, 2008.
 #
 # Suomennossuositukset tai -ehdotukset:
 #
@@ -25,8 +26,8 @@ msgstr ""
 "Project-Id-Version: nautilus 1.1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-26 12:40+0300\n"
-"PO-Revision-Date: 2007-02-12 18:54+0300\n"
-"Last-Translator: Ilkka Tuohela <hile@iki.fi>\n"
+"PO-Revision-Date: 2008-03-24 18:38+0200\n"
+"Last-Translator: Timo Jyrinki <timo.jyrinki@iki.fi>\n"
 "Language-Team: Finnish <gnome-fi-laatu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2031,7 +2032,7 @@ msgstr "%S / %S"
 #.
 #: ../libnautilus-private/nautilus-file-operations.c:2609
 msgid "%S of %S — %T left (%S/sec)"
-msgstr "%S / %S - %T jäljell (%S/s)"
+msgstr "%S / %S - %T jäljellä (%S/s)"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2838
 msgid ""
@@ -6274,7 +6275,8 @@ msgstr "Copyright © 1999-2007 Nautiluksen tekijät"
 #: ../src/nautilus-window-menus.c:463
 msgid "translator-credits"
 msgstr ""
-"Ilkka Tuohela, 2005-2007\n"
+"Timo Jyrinki, 2008\n"
+"Ilkka Tuohela, 2005-2008\n"
 "Pauli Virtanen, 2000-2005\n"
 "\n"
 "http://gnome.fi/"
